<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/dialog_lay_design"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/play_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:contentDescription="@string/audio_play_button"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/play"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:gravity="center"
                />
        </LinearLayout>
        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/dialog_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:contentDescription="@string/dialogs"
            />
    </LinearLayout>




</LinearLayout>